Update index page for seo

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#" >
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="description" content="Spotify app that allows authorized users to search for songs and create playlists."/>
+    <meta property="og:title" content="Jammming" />
+    <meta name="author" content="Maria Shaffer" />
+    <meta property="og:type" content="Playlist app" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/images/jammming-image.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:alt" content="Landing page of Jammming site with music search bar and logo" />
+    <meta property="og:url" content="https://jammming.mariashaffer.co" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
